- Bug 2540 - fixed dead assignment on mesh/ie-dot11s-perr
- Bug 2541 - preamble not assigned correctly
- Bug 2542 - dead assignment on wifi mac-low
- Bug 2545 - Optimized build fails for flow-monitor
- Bug 2547 - dead assignments on various tcp congestion controls
- Bug 2551 - wifi preamble should be part of TXVECTOR
- Bug 2552 - Remove code duplication between Yans and Spectrum
- Bug 2561 - TCP can not use Connect after a BindToNetDevice
- Bug 2563 - Modify pybindgen version check to >= minimum version required
- Bug 2564 - Simulation crashes when CtsTimeout is triggered for A-MPDU transmissions
- Bug 2566 - BlockAckManager::GetNRetryNeededPackets missing some packets in the queue
- Bug 2573 - Added TCP Ledbat
- Bug 2577 - simulation crashes when A-MPDU and multiple TOS are used with RTS-CTS enabled
- Bug 2578 - Assert "Internal collision but no packet in queue" unexpectedly triggered
- Bug 2584 - MacLow triggers StartNext even if there is no TXOP
- Bug 2587 - Avoid overflow in htcp.cc
- Bug 2590 - Minor enhancements in red-queue-disc{.h, .cc}
- Bug 2591 - 802.11e Block Ack mechanism cannot be enabled on HT/VHT stations
- Bug 2594 - vht-wifi-network provides very low throughtput at MCS 6, 160 MHz, SGI
- Bug 2601 - HT stations should use 40 MHz channel width if the configured channel width is set to 80 or 160 MHz
- Bug 2604 - QosData frames with Block Ack policy should be separated by SIFS as long as they belong to the same TXOP
- Bug 2605 - A HT/VHT station transmitting to a legacy access point results in a null throughput
- Bug 2606 - Ideal rate manager does not work correctly when a HT/VHT station is transmitting to a legacy access point
- Bug 2613 - MaxRxSequence () is sometimes too large
- Bug 2607 - Minstrel HT manager results in an endless loop when a 802.11ac station is transmitting to a 802.11a access point
- Bug 2614 - RIP header version should be set to 2
- Bug 2627 - Ipv6RawSocket does not honor the bound interface when sending packets