@@ -269,6 +269,7 @@ def build(bld):
         'test/tcp-pkts-acked-test.cc',
         'test/tcp-rtt-estimation.cc',
         'test/tcp-bytes-in-flight-test.cc',
+        'test/tcp-advertised-window-test.cc',
         'test/udp-test.cc',
         'test/ipv6-address-generator-test-suite.cc',
         'test/ipv6-dual-stack-test-suite.cc',
